# husky_prangate_voinea

./: readme.txt
action_quiz/ardrone_action/: CMakeLists.txt  package.xml
action_quiz/ardrone_action/action/: DroneControl.action
action_quiz/ardrone_action/launch/: drone_action_server.launch
action_quiz/ardrone_action/scripts/: drone_action_server.py
example/: package.xml
service_quiz/launch/: call_tb3_move_in_circle_service_server.launch
service_quiz/src/: move_in_square_server.py  move_srv.py
topics_quiz/src/husky_zid/: CMakeLists.txt  package.xml
topics_quiz/src/husky_zid/launch/: zid.launch
topics_quiz/src/husky_zid/scripts/: zid.py
